# bioinfo-scientist-starter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/skills/bioinfo-pipeline/: SKILL.md
.agents/skills/experiment-design/: SKILL.md
.github/workflows/: ci.yml
configs/: agent_workflow.yaml  experiment.yaml  project.yaml
data/: README.md
data/metadata/: samples.csv
docs/: ai_use_log.md  decision_log.md  experiment_protocol.md  figure_review.md  idea_bank.yml  idea_generation_protocol.md  internal_review.md  mac_wsl_workflow.md  overclaiming_audit.md  project_brief.md  reproducibility_audit.md  research_questions.md  risk_register.md  submission_checklist.md
envs/: aidd-gpu.yml  bioinfo.yml  core.yml  scrna.yml
literature/: gap_map.md  reading_matrix.csv
literature/bib/: library.bib
literature/paper_cards/: TEMPLATE.md
literature/search_queries/: EXAMPLE.md
manuscript/: main.qmd
results/: claim_ledger.yml  run_registry.yml
scripts/: audit_citations.py  audit_claims.py  audit_reproducibility.py  build_paper_cards.py  check_gpu.py  generate_ideas.py  literature_search.py  make_figures.py  plot_qc.py  qc_summary.py  review_claims.py  review_figures.py  review_manuscript.py  setup_mac.sh  setup_wsl_gpu.sh  smoke_test.py  sync_results_from_wsl.sh
src/bioinfo_scientist/: ideas.py  literature.py  paper_cards.py  plotting.py  qc.py
tests/: test_literature_search.py  test_paper_cards.py  test_qc.py  test_review_scripts.py  test_structure.py
workflows/nextflow/: main.nf
workflows/snakemake/: Snakefile
(+9 files in other folders)
