[project]
name = "bioinfo-scientist"
version = "0.1.0"
description = "Codex-assisted reproducible bioinformatics manuscript system"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --disable-warnings"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
